Refactored the Position class